<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorial</name>
  <version>0.0.0</version>
  <description>The beginner_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>

</package>
