<?xml version="1.0"?>
<package format="2">
  <name>gps_test</name>
  <version>0.0.0</version>
  <description>The gps_test package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export></export>

</package>
