<?xml version="1.0"?>
<package format="2">
  <name>kinect_freenect</name>
  <version>0.0.0</version>
  <description>The kinect_freenect package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export></export>

</package>
