<?xml version="1.0"?>
<package format="2">
  <name>my_pcl_tutorial</name>
  <version>0.0.0</version>
  <description>The my_pcl_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export></export>

</package>
