<?xml version="1.0"?>
<package format="2">
  <name>pluginlib_tutorial</name>
  <version>0.0.0</version>
  <description>The pluginlib_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>


  <export>
    <pluginlib_tutorial plugin="${prefix}/polygon_plugin.xml"/>
  </export>

</package>
