<?xml version="1.0"?>
<package format="2">
  <name>action_header</name>
  <version>0.0.0</version>
  <description>The action_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

  <export></export>

</package>
