cmake_minimum_required(VERSION 2.8.3)
project(action_tutorial)

#find_package(catkin REQUIRED COMPONENTS
#  std_msgs
#  roscpp
#  actionlib
#)
#
#add_action_files(
#  DIRECTORY
#  action
#  FILES
#  Action1.action
#)
#
#generate_messages(
#  DEPENDENCIES
#  std_msgs  # Or other packages containing msgs
#  actionlib_msgs
#)
#
#catkin_package(
#  CATKIN_DEPENDS message_runtime std_msgs actionlib_msgs
#)
#
#include_directories(
#  ${catkin_INCLUDE_DIRS}
#)
#
##add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
#
##target_link_libraries(${PROJECT_NAME}_node
##  ${catkin_LIBRARIES}
##)
