<?xml version="1.0"?>
<package format="2">
  <name>action_header</name>
  <version>0.0.0</version>
  <description>The actionlib_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <exec_depend>message_generation</exec_depend>

  <export></export>

</package>
