<?xml version="1.0"?>
<package format="2">
  <name>action_runner</name>
  <version>0.0.0</version>
  <description>The actionlib_tutorial package</description>

  <maintainer email="tamura-kosei@todo.todo">tamura-kosei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>action_header</depend>

  <export></export>

</package>
